<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

<RelativeLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragments.RegisterFragment"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <EditText
            android:id="@+id/et_fname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="First name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:inputType="text"
            android:layout_above="@id/et_lname"
            android:background="@drawable/et_custom"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/et_lname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Last name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:inputType="text"
            android:layout_above="@id/et_email"
            android:background="@drawable/et_custom"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:layout_above="@id/et_password"
            android:background="@drawable/et_custom"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:layout_above="@id/btn_signup"
            android:background="@drawable/et_custom"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_custom"
            android:text="Sign up"/>

        <TextView
            android:id="@+id/et_register_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_link"
            android:textColor="#87cefa"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:textSize="12sp"/>
    </LinearLayout>
</RelativeLayout>
</ScrollView>