<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activities.MainActivity"
    android:id="@+id/drawer">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <LinearLayout
          android:id="@+id/header"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:orientation="vertical"
         >
          <androidx.appcompat.widget.Toolbar
              android:layout_width="match_parent"
              android:layout_height="?attr/actionBarSize"
              android:id="@+id/toolbar"
              android:background="@color/colorPrimary"
              android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
          </androidx.appcompat.widget.Toolbar>


      </LinearLayout>

        <LinearLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/footer"
            android:layout_below="@+id/header"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMaxWidth="0dp"
                app:tabMode="fixed"
                app:tabGravity="fill">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/parts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parts"
                    />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/accessories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accessories"
                    />

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

                <include
                    layout="@layout/main_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">
            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/bottom_toolbar"
                app:itemIconTint="@drawable/selector"
                app:itemTextColor="@drawable/selector"
                app:labelVisibilityMode="unlabeled"
                app:itemHorizontalTranslationEnabled="false"
                app:menu="@menu/bottom_menu"/>
        </LinearLayout>

    </RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/drawer_header"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>


</androidx.drawerlayout.widget.DrawerLayout>