<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/checkout">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="horizontal"
               android:layout_marginBottom="10dp"
               android:weightSum="2">
               <TextView
                   android:id="@+id/name_label"
                   android:text="Name"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="16sp"
                   android:textStyle="bold"
                   android:layout_weight="1.50"
                   />
               <TextView
                   android:id="@+id/name"
                   android:text=""
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="16sp"
                   android:layout_weight="0.50"
                   />
           </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:weightSum="2">
            <TextView
                android:id="@+id/address_label"
                android:text="Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_weight="1.50"
                />
            <TextView
                android:id="@+id/address"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="0.50"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/contact_label"
                android:text="Contact info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_weight="1.50"
                />
            <TextView
                android:id="@+id/contact"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="0.50"
                />
        </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d3d3d3"
            android:layout_margin="10dp"
           />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:orientation="vertical">

        <include
            layout="@layout/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d3d3d3"
            android:layout_margin="10dp"
            />
         <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/sub_total_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/subtotal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/sub_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free"
                android:textSize="18sp"
                android:layout_weight="1"
                android:textAlignment="center"/>
        </LinearLayout>

         <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/shipping_fee_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="Shipping fee"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/shipping_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free"
                android:textSize="18sp"
                android:layout_weight="1"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/total_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/total"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1"
             />

            <TextView
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free"
                android:textSize="18sp"
                android:layout_weight="1"
                android:textAlignment="center"/>
        </LinearLayout>

        <Button
            android:id="@+id/place_order"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="Place Order"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

</RelativeLayout>


